--- a/index.html
+++ b/index.html
@@ -2050,12 +2050,12 @@
     />
     <link
       type="text/css"
-      href="./src/css/style.min.css" <!-- "/Content/pc/style.min.css?v=<%=DateTime.Now.Ticks %>" -->
+      href="./src/css/style.min.css"
       rel="stylesheet"
     />
     <link
       type="text/css"
-      href= "src/css/custom.css" <!-- "/Content/pc/custom.css?v=<%=DateTime.Now.Ticks %>" -->
+      href= "src/css/custom.css"
       rel="stylesheet"
     />
 
@@ -2161,14 +2161,14 @@
       }
     </style>
 
-   <!--  <script type="text/javascript">
+    <script type="text/javascript">
       $(function () {
         $(".ribbon-label img").attr(
           "src",
           "/Data/upload/images/Adv/Asset%204.png"
         );
       });
-    </script> -->
+    </script>
 
     <meta
       http-equiv="origin-trial"
