--- a/index.html
+++ b/index.html
@@ -2997,7 +2997,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <div class="zalo-chat-widget" data-oaid="57473295689479912" data-welcome-message="Rất vui khi được hỗ trợ bạn!" data-autopopup="0" data-width="" data-height="" style="border: none; visibility: visible; bottom: 52px; right: 52px; position: fixed; width: 60px; z-index: 2147483644; height: 60px; top: auto;">
   <iframe frameborder="0" allowfullscreen="" scrolling="no" width="60" height="60" src="https://page.widget.zalo.me/?position=null&amp;oaid=57473295689479912&amp;welcomemessage=R%E1%BA%A5t%20vui%20khi%20%C4%91%C6%B0%E1%BB%A3c%20h%E1%BB%97%20tr%E1%BB%A3%20b%E1%BA%A1n!&amp;autopopup=0&amp;leftside=false&amp;width=440&amp;height=813&amp;style=2&amp;id=f67caadc-6315-4b23-8877-378276f0d1c6&amp;domain=aristino.com&amp;android=false&amp;ios=false" style="max-height: 90vh; position: absolute; bottom: 0px; right: 0px;"></iframe>
-  <html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="theme-color" content="#000000"><link rel="icon" href="/static/favicon.ico"><link rel="apple-touch-icon" href="/static/logo192.png"><link rel="manifest" href="/static/manifest.json"><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700;900&amp;display=swap" rel="stylesheet"><title>OA Chat Widget</title><script type="text/javascript" src="https://px.dmp.zaloapp.com/static/zdmp_tr_px.js"></script><script>window.ZALO_LOGIN_DOMAIN="https://id.zalo.me/account/login",window.WIDGET_APP_DOMAIN="https://page.widget.zalo.me",window.ENV="production",window.APP_ID="7711843404775064594"</script><script src="https://za.zdn.vn/v3/za.js"></script><script src="https://sp-zp.zdn.vn/sdk-server-1.0.0.js"></script><script src="/static/js/cphandler.js"></script><script src="/static/js/zinit.js?v5"></script><link rel="preconnect" href="https://fonts.gstatic.com"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700;900&amp;display=swap"><link rel="stylesheet" href="/static/css/fa/css/all.min.css"><link href="/static/static/css/main.607e1b85.chunk.css" rel="stylesheet"><style data-react-tooltip="true">.__react_component_tooltip {
+  <html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="theme-color" content="#000000"><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700;900&amp;display=swap" rel="stylesheet"><title>OA Chat Widget</title><script type="text/javascript" src="https://px.dmp.zaloapp.com/static/zdmp_tr_px.js"></script><script>window.ZALO_LOGIN_DOMAIN="https://id.zalo.me/account/login",window.WIDGET_APP_DOMAIN="https://page.widget.zalo.me",window.ENV="production",window.APP_ID="7711843404775064594"</script><script src="https://za.zdn.vn/v3/za.js"></script><script src="https://sp-zp.zdn.vn/sdk-server-1.0.0.js"></script><script src="/static/js/cphandler.js"></script><script src="/static/js/zinit.js?v5"></script><link rel="preconnect" href="https://fonts.gstatic.com"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700;900&amp;display=swap"><link rel="stylesheet" href="/static/css/fa/css/all.min.css"><link href="/static/static/css/main.607e1b85.chunk.css" rel="stylesheet"><style data-react-tooltip="true">.__react_component_tooltip {
   border-radius: 3px;
   display: inline-block;
   font-size: 13px;
@@ -3924,7 +3924,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="carousel-inner">
             
-            <div class="carousel-item" "="">
+            <div class="carousel-item" "=">
                 <a href="" style="width: 100%" target="_blank">
                     <img src="./src/img/New-Arrivals_Banner-Slide_1920x900-1.jpg" class="d-block w-100" alt="Hero Banner 1 - Desktop - (2)" width="1346" height="639">
                 </a>
@@ -4427,7 +4427,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <h4>THEO DÕI BẢN TIN CỦA CHÚNG TÔI</h4>
     <form method="post" name="subscribe_form" id="subscribe_form">
         <div class="input-group mb-3">
-            <input type="email" class="form-control" "="" name="Email" aria-label="Nhập email của bạn..." placeholder="Nhập email của bạn...">
+            <input type="email" class="form-control" "=" name="Email" aria-label="Nhập email của bạn..." placeholder="Nhập email của bạn...">
             <button type="button" class="btn btn-outline-secondary btn-subscribe">ĐĂNG KÝ</button>
             <input type="submit" style="display: none">
         </div>
